--- a/about.html
+++ b/about.html
@@ -29,20 +29,20 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item @@about-active active">
+            <li class="nav-item @@about-active">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
-              <a class="nav-link" href="events.html">Careers</a>
+              <a class="nav-link" href="careers.html">Careers</a>
             </li>
             <li class="nav-item @@services-active">
               <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-              <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+              <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
             </li>
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
@@ -154,8 +154,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <img src="assets/images/bg.jpg" alt="P2W" />
-                    <a href="about.html" class="btn btn-light theme-button" 
-                    style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+                    <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
                     color: #fff; background: #ab07d4; border: none;">Download Now</a>
                   </div>
                 </div>
@@ -181,7 +180,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Events</a></li>
-                    <li><a href="#url">Support</a></li>
+                    <li><a href="support.html">Support</a></li>
                     <li><a href="#url">Purchase Token</a></li>
                   </ul>
                 </div>
@@ -199,10 +198,11 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
@@ -214,7 +214,8 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights reserved
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
+              reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
@@ -241,8 +242,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" 
-            style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
             color: #fff; background: #ab07d4; border: none;">Download Now</a>
           </div>
         </div>
@@ -463,4 +463,5 @@
     $('#exampleModalCenter').modal('show')
   </script>
 </body>
+
 </html>
