--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
 <body>
   <!--header-->
   <div class="bnr">
-
     <header id="site-header" class="fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
-          <!-- <a class="navbar-brand" href="index.html">
-                <span class="fa fa-handshake-o"></span> Masterwork
-            </a> -->
-
           <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
             <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
@@ -47,13 +42,13 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item @@services-active">
-                <a class="nav-link" href="events.html">Careers</a>
+                <a class="nav-link" href="careers.html">Careers</a>
               </li>
               <li class="nav-item @@services-active">
                 <a class="nav-link" href="events.html">Events</a>
               </li>
               <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+                <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
               </li>
               <li class="nav-item @@contact-active">
                 <a class="nav-link" href="support.html">Support</a>
@@ -64,7 +59,6 @@
       </div>
     </header>
     <main>
-
       <!--/header-->
       <!-- index-block1 -->
       <div class="w3l-index1">
@@ -112,19 +106,15 @@
                 </div>
                 <div class="item">
                   <img src="assets/images/s2.jpg" alt="boardgame room" class="img-fluid">
-
                 </div>
                 <div class="item">
                   <img src="assets/images/s3.jpg" alt="game lobby" class="img-fluid">
-
                 </div>
                 <div class="item">
                   <img src="assets/images/s4.jpg" alt="cruise boat" class="img-fluid">
-
                 </div>
                 <div class="item">
                   <img src="assets/images/s5.jpg" alt="concert arena" class="img-fluid">
-
                 </div>
                 <div class="item">
                   <img src="assets/images/s6.jpg" alt="club house" class="img-fluid">
@@ -132,7 +122,6 @@
                 </div>
                 <div class="item">
                   <img src="assets/images/s7.jpg" alt="game menu" class="img-fluid">
-
                 </div>
               </div>
             </div>
@@ -186,7 +175,6 @@
       </div>
     </div>
   </section>
-
   </main>
   <footer>
     <!-- footer -->
@@ -202,7 +190,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Events</a></li>
-                    <li><a href="#url">Support</a></li>
+                    <li><a href="support.html">Support</a></li>
                     <li><a href="#url">Purchase Token</a></li>
                   </ul>
                 </div>
@@ -220,10 +208,11 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
@@ -235,7 +224,8 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights reserved
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
+              reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
@@ -255,21 +245,18 @@
         </div>
       </div>
       </div>
-
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" 
-            style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
             color: #fff; background: #ab07d4; border: none;">Download Now</a>
           </div>
         </div>
       </div>
       <!-- move top -->
-
       <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fa fa-angle-up"></span>
       </button>
@@ -313,41 +300,6 @@
   <!-- Template JavaScript -->
   <script src="assets/js/owl.carousel.js"></script>
 
-  <!-- script for testimonials -->
-  <script>
-    $(document).ready(function () {
-      $('.owl-two').owlCarousel({
-        loop: true,
-        margin: 0,
-        nav: false,
-        responsiveClass: true,
-        autoplay: false,
-        autoplayTimeout: 5000,
-        autoplaySpeed: 1000,
-        autoplayHoverPause: false,
-        responsive: {
-          0: {
-            items: 1,
-            nav: false
-          },
-          480: {
-            items: 1,
-            nav: false
-          },
-          667: {
-            items: 1,
-            nav: false
-          },
-          1000: {
-            items: 2,
-            nav: false
-          }
-        }
-      })
-    })
-  </script>
-  <!-- //testimonials owlcarousel -->
-
   <!-- script for customers -->
   <script>
     $(document).ready(function () {
@@ -379,33 +331,11 @@
           }
         }
       })
-      // $('#exampleModalCenter').show()
     })
   </script>
   <!-- //customers owlcarousel -->
-
   <!-- responsive tabs -->
   <script src="assets/js/easyResponsiveTabs.js"></script>
-
-  <!--Plug-in Initialisation-->
-  <script type="text/javascript">
-    $(document).ready(function () {
-      //Horizontal Tab
-      $('#parentHorizontalTab').easyResponsiveTabs({
-        type: 'default', //Types: default, vertical, accordion
-        width: 'auto', //auto or any width like 600px
-        fit: true, // 100% fit in a container
-        tabidentify: 'hor_1', // The tab groups identifier
-        activate: function (event) { // Callback function if tab is switched
-          var $tab = $(this);
-          var $info = $('#nested-tabInfo');
-          var $name = $('span', $info);
-          $name.text($tab.text());
-          $info.show();
-        }
-      });
-    });
-  </script>
 
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script>
@@ -472,10 +402,6 @@
     });
   </script>
   <!--//MENU-JS-->
-
-  <!-- POPOVER -->
-
-  <!-- //POPOVER -->
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
