--- a/p2w.html
+++ b/p2w.html
@@ -39,7 +39,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item @@about-active">
@@ -49,10 +49,10 @@
                             <a class="nav-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nav-item @@services-active">
-                            <a class="nav-link" href="careers.html">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                            <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+                            <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
                         </li>
                         <li class="nav-item @@contact-active">
                             <a class="nav-link" href="support.html">Support</a>
@@ -245,14 +245,14 @@
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
 
-    <!-- Calculating  -->
+    <!-- Token Calculation  -->
     <script>
         $('#token').keyup(() => {
             let token = parseInt($('#token').val());
             if (token < 2)
                 shells = parseInt($('#token').val(2));
             if (token > 10)
-            shells = parseInt($('#token').val(10));
+                shells = parseInt($('#token').val(10));
             shells = parseInt($('#token').val());
             buyShells(shells);
         })
