--- a/about.html
+++ b/about.html
@@ -260,15 +260,13 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
-<<<<<<< HEAD
-<<<<<<< HEAD
-            color: #fff; background: #ab07d4; border: none;">Go To Event</a>
-=======
-=======
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
-            color: #fff; background: #ab07d4; border: none;">Download Now</a>
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
+            <a href="p2w.html" class="btn btn-light theme-button" 
+              style="border-radius: 40px; 
+              position: absolute; bottom: 30px; 
+              left:30px;
+              color: #fff; 
+              background: #ab07d4; 
+              border: none;">Go To Event</a>
           </div>
         </div>
       </div>
