fixed the merging bug

--- a/p2w.html
+++ b/p2w.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                            <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
+                            <a class="btn btn-outline-primary theme-button" href="register.html">Download Now</a>
                         </li>
                         <li class="nav-item @@contact-active">
                             <a class="nav-link" href="support.html">Support</a>
@@ -85,7 +85,7 @@
                                             Play to win IN THE METAVERSE FOR 1 million NAIRA AND A VR OCULUS QUEST 2
                                             HEADSET. We are celebrating our launch and
                                             have decided to give out prizes to a lucky winner</p>
-                                        <a href="p2w.html"
+                                        <a href="register.html"
                                             class="btn btn-outline-primary theme-button mt-3 text-capitalize">Register
                                             for Event</a>
                                     </div>
