--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-              <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
+              <a class="btn btn-outline-primary theme-button" href="register.html">Download Now</a>
             </li>
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
@@ -139,7 +139,7 @@
             </div>
             <div class="mt-5 request-quote">
               <!-- request a demo form popup -->
-              <a type="button" class="btn btn-primary theme-button" href="p2w.html">
+              <a type="button" class="btn btn-primary theme-button" href="register.html">
                 Download
               </a>
 
@@ -174,15 +174,9 @@
                   <ul class="footer-gd-16">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-<<<<<<< HEAD
                     <li><a href="careers.html">Events</a></li>
                     <li><a href="support.html">Support</a></li>
                     <li><a href="register.html">Download</a></li>
-=======
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="support.html">Support</a></li>
-                    <li><a href="#url">Purchase Token</a></li>
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
                   </ul>
                 </div>
                 <div class="col-md-6 column mt-md-0 mt-4">
@@ -226,18 +220,8 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-<<<<<<< HEAD
-<<<<<<< HEAD
             <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
-              rights
-=======
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
-=======
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
-              reserved
-            </p>
+              rights reserved
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
             <ul class="social">
