--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="events.html">Events</a>
               </li>
               <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
+                <a class="btn btn-outline-primary theme-button" href="register.html">Download Now</a>
               </li>
               <li class="nav-item @@contact-active">
                 <a class="nav-link" href="support.html">Support</a>
@@ -70,7 +70,7 @@
                 </h3>
                 <h3 style="color: #ab07d4">BOAT ISLAND VR</h3>
                 <p class="mt-3 mb-lg-5 mb-4">A Multiplayer Virtual Reality (VR) <br>Sandbox.</p>
-                <a href="about.html" class="btn btn-outline-primary theme-button text-capitalize" style="border-radius: 40px; 
+                <a href="events.html" class="btn btn-outline-primary theme-button text-capitalize" style="border-radius: 40px; 
           color: #fff; background: #ab07d4; border: none;">Get Started</a>
               </div>
               <div class="col-lg-6 content-photo mt-lg-0 mt-5">
@@ -168,7 +168,7 @@
             <p class="mt-md-4 mt-3 mb-md-5 mb-4">Play In the Metaverse to stand a chance to win
               &#8358;1,000,000 and <br>an Oculus Quest II VR Headset.
             </p>
-            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; 
+            <a href="register.html" class="btn btn-light theme-button" style="border-radius: 40px; 
             color: #fff; background: #ab07d4; border: none;">Download Now</a>
           </div>
         </div>
@@ -224,29 +224,9 @@
                         token for access.
                     </p>
                 </div>
-<<<<<<< HEAD
-=======
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
-                  style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
-              </h3>
-
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and
-                ISLANDERS. The first multiplayer
-                virtual reality platform for creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
-                enjoy
-                exclusive content and entertainment from different BOATS (creators) around the world.
-                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
-              </p>
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
             </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-<<<<<<< HEAD
             <div class="columns text-lg-left text-center">
                 <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
                     rights
@@ -267,49 +247,17 @@
             </div>
         </div>
     </div>
-=======
-          <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
-              reserved
-            </p>
-          </div>
-          <div class="columns-2 mt-lg-0 mt-3">
-            <ul class="social">
-              <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-              </li>
-              <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
-              </li>
-              <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-              </li>
-              <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-              </li>
-              <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
       </div>
-<<<<<<< HEAD
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
-=======
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-<<<<<<< HEAD
-<<<<<<< HEAD
             <a href="p2w.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
             color: #fff; background: #ab07d4; border: none;">Go To Event</a>
-=======
-=======
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
-            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
-            color: #fff; background: #ab07d4; border: none;">Download Now</a>
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
           </div>
         </div>
       </div>
