--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="careers.html">Events</a>
                         </li>
                         <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                            <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+                            <a class="btn btn-outline-primary theme-button" href="register.html">Download Now</a>
                         </li>
                         <li class="nav-item @@contact-active">
                             <a class="nav-link" href="support.html">Support</a>
