--- a/support.html
+++ b/support.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-              <a class="btn btn-outline-primary theme-button" href="#">Download Now</a>
+              <a class="btn btn-outline-primary theme-button" href="register.html">Download Now</a>
             </li>
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
